welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:30: error: ';' expected but ')' found.
 )
 ^Program:33: error: ')' expected but '}' found.
}
^